# AgenticEvaluationFramework

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  high_level_architecture.md  pyproject.toml
.github/workflows/: ci.yml
adr/: 0001-adopt-architecture-decision-records.md  0002-backend-technology-stack.md  0003-adapter-architecture-for-models-and-datasets.md  0004-default-metric-suite-and-plugin-contract.md  0005-execution-engine-local-and-distributed.md  0006-persistence-sqlite-default-postgres-swap-in.md  0007-cli-configuration-with-hydra-and-hydra-zen.md  0008-frontend-stack-angular-strict-typescript-plotly-mermaid.md  0009-frontend-docker-dev-environment.md  0010-code-quality-standards.md  0011-testing-strategy-and-mock-adapters.md  0012-logging-and-telemetry-contract.md  0013-default-local-model-smollm.md  0014-llm-as-judge-contract-and-bias-mitigation.md  README.md
backend/: README.md  __init__.py  alembic.ini  pyproject.toml
backend/adapters/: __init__.py  capabilities.py  registry.py
backend/adapters/datasets/: __init__.py  base.py  mocks.py
backend/adapters/models/: __init__.py  base.py  mocks.py
backend/api/: __init__.py  app.py  dependencies.py  schemas.py  ws_schemas.py
backend/api/routers/: __init__.py  adapters.py  datasets.py  metrics.py  runs.py
backend/config/: __init__.py  settings.py
backend/contracts/: __init__.py  adapter_spec.py  metric_result.py  persistence.py  primitives.py  run.py  telemetry.py
backend/engine/: __init__.py  base.py  local.py  pipeline.py
backend/metrics/: __init__.py  base.py  registry.py
backend/metrics/embedding/: __init__.py
backend/metrics/learned/: __init__.py
backend/metrics/lexical/: __init__.py  _text.py  bleu.py  chrf.py  exact_match.py  fuzzy_match.py  meteor.py  ngram.py  rouge.py  token_f1.py
backend/metrics/operational/: cost.py  latency.py  output_validity.py  token_counts.py
backend/observability/: __init__.py  context.py  logging.py  telemetry.py  timing.py
backend/persistence/: __init__.py  base.py  orm.py  session.py  sqlite.py
backend/persistence/migrations/: __init__.py  env.py
backend/persistence/migrations/versions/: 0001_initial.py
backend/src/aef/: __init__.py
backend/src/aef/adapters/: __init__.py  capabilities.py  registry.py
backend/src/aef/adapters/datasets/: __init__.py  base.py  mocks.py
backend/src/aef/adapters/models/: __init__.py  base.py  mocks.py
backend/src/aef/api/: __init__.py  app.py  dependencies.py  schemas.py  ws_schemas.py
backend/src/aef/api/routers/: __init__.py  adapters.py  datasets.py  metrics.py  runs.py
backend/src/aef/cli/: __init__.py  config.py  entrypoint.py  visualize.py
backend/src/aef/config/: __init__.py  settings.py
backend/src/aef/contracts/: __init__.py  adapter_spec.py  metric_result.py  persistence.py  primitives.py  run.py  telemetry.py
backend/src/aef/engine/: __init__.py  base.py  local.py  pipeline.py
backend/src/aef/metrics/: __init__.py  base.py  registry.py
backend/src/aef/metrics/embedding/: __init__.py
backend/src/aef/metrics/lexical/: __init__.py  _text.py  bleu.py  chrf.py  exact_match.py  fuzzy_match.py  meteor.py  ngram.py  rouge.py  token_f1.py
backend/src/aef/metrics/operational/: __init__.py  cost.py  latency.py  output_validity.py  token_counts.py
backend/src/aef/metrics/rag/: __init__.py
backend/src/aef/observability/: __init__.py  context.py  logging.py  telemetry.py  timing.py
backend/src/aef/persistence/: __init__.py  base.py  orm.py  session.py  sqlite.py
backend/src/aef/persistence/migrations/: env.py
backend/src/aef/persistence/migrations/versions/: __init__.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/fixtures/golden/: run_result.json
backend/tests/integration/api/: __init__.py  test_runs_router.py
backend/tests/integration/cli/: __init__.py  test_aef_eval.py
backend/tests/integration/engine/: __init__.py  test_local_engine.py
backend/tests/integration/persistence/: test_alembic.py  test_sqlite_storage.py
backend/tests/unit/adapters/: test_capabilities.py  test_mock_chat_model.py  test_mock_dataset.py  test_mock_judge.py  test_registry.py
backend/tests/unit/api/: __init__.py  test_no_orm_leak.py  test_openapi.py  test_ws_schemas_parity.py
backend/tests/unit/cli/: __init__.py  test_overrides.py
backend/tests/unit/contracts/: test_adapter_spec.py  test_metric_result.py  test_no_any_in_schemas.py  test_persistence.py  test_primitives.py  test_run.py  test_telemetry.py
backend/tests/unit/engine/: __init__.py  test_progress_events.py
backend/tests/unit/metrics/: test_lazy_imports.py  test_lexical.py  test_operational.py  test_registry.py
backend/tests/unit/observability/: test_context.py  test_logging.py  test_telemetry_span.py  test_timing.py
backend/tests/unit/persistence/: test_redaction.py  test_settings.py
cli/: .gitignore  README.md  __init__.py  config.py  entrypoint.py  pyproject.toml  visualize.py
cli/tests/integration/: test_aef_eval.py
cli/tests/unit/: __init__.py  test_hydra_config.py  test_visualize.py
configs/: eval_run.yaml
configs/dataset/: mock.yaml
configs/metrics/: default.yaml  lexical_only.yaml
configs/model/: mock.yaml
configs/output/: default.yaml
configs/sampling/: balanced.yaml  creative.yaml  default.yaml  greedy.yaml
scripts/: check_rest_docstrings.py
