[project]
name = "backend"
version = "0.1.0"
description = "Agentic Evaluation Framework — backend library and FastAPI API."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "jorgejc2" }]
keywords = ["llm", "evaluation", "agentic", "metrics", "benchmark"]

# Runtime dependencies. Heavy / specific model SDKs live in optional groups so a
# default `uv sync` keeps the install slim.
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "aiosqlite>=0.20,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
    "python-json-logger>=2.0,<3",
    "jinja2>=3.1,<4",
    "websockets>=12,<14",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
# Lexical metrics that pull external libraries — kept optional so the walking
# skeleton can run without them and tests can opt in.
lexical = [
    "sacrebleu>=2.4,<3",
    "rouge-score>=0.1.2,<1",
    "rapidfuzz>=3.6,<4",
    "nltk>=3.8,<4",
]
# Reserved for future milestones; declared here so the dependency surface is
# enumerated up-front per ADR-0002.
embedding = [
    "sentence-transformers>=3.0,<4",
    "torch>=2.3,<3",
]
huggingface = [
    "transformers>=4.43,<5",
    "torch>=2.3,<3",
    "accelerate>=0.32,<2",
]
ollama = ["ollama>=0.3,<1"]
openai = ["openai>=1.40,<2"]
anthropic = ["anthropic>=0.34,<1"]
langgraph = ["langgraph>=0.2,<1"]
distributed = [
    "celery>=5.4,<6",
    "redis>=5.0,<6",
]

[dependency-groups]
dev = [
    "ruff>=0.5,<0.6",
    "pyright>=1.1.370,<1.2",
    "pre-commit>=3.7,<4",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "freezegun>=1.5,<2",
    "respx>=0.21,<1",
    "types-PyYAML>=6.0,<7",
    {include-group = "lexical"},
]
lexical = [
    "sacrebleu>=2.4,<3",
    "rouge-score>=0.1.2,<1",
    "rapidfuzz>=3.6,<4",
    "nltk>=3.8,<4",
]

[project.scripts]
aef-api = "backend.api.app:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-exclude]
tests = true

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# Ruff — single source of truth for linting + formatting (ADR-0010).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = [".", "tests"]
extend-exclude = ["persistence/migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "ANN",           # flake8-annotations
    "S",             # flake8-bandit (security)
    "B",             # flake8-bugbear
    "A",             # flake8-builtins
    "RUF",           # Ruff-specific
    "D",             # pydocstyle
    "PYI",           # flake8-pyi
]
ignore = [
    "D203",  # one-blank-line-before-class — conflicts with D211 (chosen).
    "D213",  # multi-line-summary-second-line — conflicts with D212 (chosen).
    "ANN101", # `self` does not need an annotation (deprecated upstream).
    "ANN102", # `cls` does not need an annotation (deprecated upstream).
    "ANN401", # Allow Any in narrow, justified spots; the architecture forbids
              # it on public surfaces but we still need it for adapter-internal
              # heterogeneous payloads. Spot violations are caught by review.
]

[tool.ruff.lint.per-file-ignores]
# Tests may use `assert`, missing docstrings, magic numbers, and hard-coded
# values for fixtures — that is the point of tests.
"tests/**/*.py" = ["S101", "ANN", "PLR2004"]
# Configuration / dunder modules don't need module docstrings.
"**/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pyright — strict type checker (ADR-0010).
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["."]
extraPaths = [".."]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "persistence/migrations/versions",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = ".."
venv = ".venv"
reportMissingTypeStubs = "error"
reportImportCycles = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"

# ---------------------------------------------------------------------------
# Pytest configuration (ADR-0011).
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = [".."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not gpu and not network and not broker and not docker",
    "--cov=backend",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
markers = [
    "gpu: requires GPU hardware (deselected by default)",
    "network: requires network access (deselected by default)",
    "broker: requires a Redis or Celery broker (deselected by default)",
    "docker: requires Docker daemon access (deselected by default)",
]

# ---------------------------------------------------------------------------
# Coverage — gate activated from M5 forward.
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
parallel = false
source = ["backend"]
omit = [
    "persistence/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
