[project]
name = "cli"
version = "0.1.0"
description = "Agentic Evaluation Framework — Hydra-driven CLI."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "jorgejc2" }]

dependencies = [
    "backend",
    "hydra-core>=1.3,<2",
    "hydra-zen>=0.13,<1",
    "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
    "ruff>=0.5,<0.6",
    "pyright>=1.1.370,<1.2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "freezegun>=1.5,<2",
    "types-PyYAML>=6.0,<7",
]

[project.scripts]
aef-eval = "cli.entrypoint:main"
aef-plot = "cli.visualize:plot_main"
aef-report = "cli.visualize:report_main"

[tool.uv.sources]
backend = { workspace = true }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "RUF",
    "D",
    "PYI",
]
ignore = [
    "D203",
    "D213",
    "ANN101",
    "ANN102",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "PLR2004"]
"**/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["."]
extraPaths = [".."]
exclude = [
    "**/__pycache__",
    "**/.venv",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = ".."
venv = ".venv"
reportMissingTypeStubs = "error"
reportImportCycles = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = [".."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cli",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
markers = [
    "gpu: requires GPU hardware (deselected by default)",
    "network: requires network access (deselected by default)",
    "broker: requires a Redis or Celery broker (deselected by default)",
    "docker: requires Docker daemon access (deselected by default)",
]

[tool.coverage.run]
branch = true
parallel = false
source = ["cli"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
