[project]
name = "cli"
version = "0.1.0"
description = "Agentic Evaluation Framework — Hydra-driven CLI."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "jorgejc2" }]

dependencies = [
    "backend",
    "hydra-core>=1.3,<2",
    "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
    "ruff>=0.5,<0.6",
    "pyright>=1.1.370,<1.2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "freezegun>=1.5,<2",
    "types-PyYAML>=6.0,<7",
]

[project.scripts]
aef-eval = "cli.entrypoint:main"
aef-plot = "cli.visualize:plot_main"
aef-report = "cli.visualize:report_main"

[tool.uv.sources]
backend = { workspace = true }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.uv]
package = true

[tool.ruff]
line-length = 150
target-version = "py313"
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", # E, W: Pycodestyle errors & warnings; F: Pyflakes (logical errors and bugs, e.g., unused imports, undefined variables, syntax issues)
    "I", # isort: keeps imports need and ordered alphabetically
    "N", # pep8-naming: Naming conventions. CamelCase for classes, snake_case for functions and variables
    "UP", # pyupgrade: Upgrades older Python syntax to newer version standards
    "ANN", # flake8-annotations: Enforces the presence of type hints for function arguments and return types
    "S", # flake8-bandit: Automated security linting
    "B", # flake8-bugbear: Finds likely bugs and design flaws
    "A", # flake8-builtins: Prevents showing Python buil-ints, e.g., naming a variables `list` or `id`
    "RUF", # Ruff-specific rules
    "D", # pydocstyle: Enforces docstring conventions
    "PYI", # flake8-pyi: Linting rules designed for Python stub files (.pyi)
]
ignore = [
    "D203", # demands a blank line before a class docstring
    "D213", # demands no blank line in a class docstring
    "ANN101", # missing type annotations for `self`
    "ANN102", # missing type annotations for `cls`
    "ANN401", # allows the type `Any` to be used when a type genuinely cannot be known
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "PLR2004"]
"**/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["."]
extraPaths = [".."]
exclude = [
    "**/__pycache__",
    "**/.venv",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = ".."
venv = ".venv"
reportMissingTypeStubs = "error"
reportImportCycles = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = [".."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cli",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
markers = [
    "gpu: requires GPU hardware (deselected by default)",
    "network: requires network access (deselected by default)",
    "broker: requires a Redis or Celery broker (deselected by default)",
    "docker: requires Docker daemon access (deselected by default)",
]

[tool.coverage.run]
branch = true
parallel = false
source = ["cli"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
